sqlite3-parser/src/snapshots/bord_sqlite3_parser__tests__check_joins-3.snap
---
source: sqlite3-parser/src/lib.rs
expression: cst
snapshot_kind: text
---
File(0..22)
└───JoinOperator(0..22)
    ├───KW_INNER(0..5)
    ├───WHITESPACE(5..6)
    ├───KW_CROSS(6..11)
    ├───WHITESPACE(11..12)
    ├───KW_CROSS(12..17)
    ├───WHITESPACE(17..18)
    └───KW_JOIN(18..22)
