sqlite3-parser/src/snapshots/bord_sqlite3_parser__tests__check_joins-4.snap
---
source: sqlite3-parser/src/lib.rs
expression: cst
snapshot_kind: text
---
File(0..21)
└───JoinOperator(0..21)
    ├───Error: IllegalJoinOperator(0..16)
    ├   ├───KW_INNER(0..5)
    ├   ├───WHITESPACE(5..6)
    ├   ├───KW_CROSS(6..11)
    ├   ├───WHITESPACE(11..12)
    ├   └───KW_LEFT(12..16)
    ├───WHITESPACE(16..17)
    └───KW_JOIN(17..21)
