sqlite3-parser/src/snapshots/bord_sqlite3_parser__tests__check_joins-7.snap
---
source: sqlite3-parser/src/lib.rs
expression: cst
snapshot_kind: text
---
File(0..23)
└───JoinOperator(0..23)
    ├───KW_OUTER(0..5)
    ├───WHITESPACE(5..6)
    ├───KW_NATURAL(6..13)
    ├───WHITESPACE(13..14)
    ├───KW_LEFT(14..18)
    ├───WHITESPACE(18..19)
    └───KW_JOIN(19..23)
