sqlite3-parser/src/snapshots/bord_sqlite3_parser__tests__check_joins-8.snap
---
source: sqlite3-parser/src/lib.rs
expression: cst
snapshot_kind: text
---
File(0..24)
└───JoinOperator(0..24)
    ├───Error: IllegalJoinOperator(0..19)
    ├   ├───KW_OUTER(0..5)
    ├   ├───WHITESPACE(5..6)
    ├   ├───KW_CROSS(6..11)
    ├   ├───WHITESPACE(11..12)
    ├   └───KW_NATURAL(12..19)
    ├───WHITESPACE(19..20)
    └───KW_JOIN(20..24)
