sqlite3-parser/src/snapshots/bord_sqlite3_parser__tests__check_joins-9.snap
---
source: sqlite3-parser/src/lib.rs
expression: cst
snapshot_kind: text
---
File(0..1)
└───JoinOperator(0..1)
    └───COMMA(0..1)
